fix: flex list spacing

--- a/packages/components/bolt-list/src/_list-item.scss
+++ b/packages/components/bolt-list/src/_list-item.scss
@@ -1,9 +1,14 @@
+@import '@bolt/core';
+
 /* ------------------------------------ *\
    List Item
 \* ------------------------------------ */
 
-@import '@bolt/core';
+// Variables
+$bolt-list-item-border-width: $bolt-border-width;
+$bolt-list-item-border-color: $bolt-border-color;
 
+// Item base styles
 .c-bolt-list-item {
   @include bolt-margin(0);
   @include bolt-padding(0);
@@ -34,59 +39,70 @@
 $bolt-list-separator-styles: solid, dashed;
 
 @each $separator-style in $bolt-list-separator-styles {
-  .c-bolt-list-item--separator-#{$separator-style} {
-    border: {
-      width: 0;
-      color: rgba(bolt-color(gray), 0.25);
-      style: #{$separator-style};
-    }
+  .c-bolt-list-item--separator-#{$separator-style},
+  .c-bolt-list-item--separator-#{$separator-style}.c-bolt-list-item--display-flex:before,
+  .c-bolt-list-item--separator-#{$separator-style}.c-bolt-list-item--display-flex:after {
+    border-width: 0;
+    border-color: $bolt-list-item-border-color;
+    border-style: #{$separator-style};
   }
 }
 
 [class*='c-bolt-list-item--separator'] {
-  &:not(.c-bolt-list-item--separator-none) {
-    &.c-bolt-list-item--display-block {
-      &:not(.c-bolt-list-item--last-item) {
-        border-bottom-width: 1px;
-      }
+  &.c-bolt-list-item--display-block {
+    &:not(.c-bolt-list-item--last-item) {
+      border-bottom-width: $bolt-list-item-border-width;
     }
+  }
 
-    &.c-bolt-list-item--display-inline {
-      &:not(.c-bolt-list-item--last-item) {
-        border-right-width: 1px;
-      }
-    }
-
-    @each $breakpoint in $bolt-breakpoints {
-      $breakpoint-name: nth($breakpoint, 1);
-
-      &.c-bolt-list-item--display-inline\@#{$breakpoint-name} {
-        &:not(.c-bolt-list-item--last-item) {
-          border-bottom-width: 1px;
-
-          @include bolt-mq($breakpoint-name) {
-            border-right-width: 1px;
-            border-bottom-width: 0;
-          }
-        }
-      }
+  &.c-bolt-list-item--display-inline {
+    &:not(.c-bolt-list-item--last-item) {
+      border-right-width: $bolt-list-item-border-width;
     }
   }
 
   &.c-bolt-list-item--display-flex {
-    margin:{
-      top: -1px;
-      right: -1px;
-    }
-    border: {
-      top-width: 1px;
-      right-width: 1px;
+    position: relative;
+
+    &:before,
+    &:after {
+      content: '';
+      position: absolute;
+      background-color: transparent;
     }
 
-    &[class*='c-bolt-list-item--spacing'] {
-      &:not(.c-bolt-list-item--inset) {
-        padding-left: 0;
-        border-top-width: 0;
+    &:before {
+      top: 0;
+      bottom: 0;
+      left: 0;
+      transform: translate3d(-100%, 0, 0);
+      width: $bolt-list-item-border-width;
+      height: 100%;
+      border-right-width: $bolt-list-item-border-width;
+    }
+
+    &:after {
+      top: 0;
+      right: 0;
+      left: 0;
+      transform: translate3d(0, -100%, 0);
+      width: 100%;
+      height: $bolt-list-item-border-width;
+      border-bottom-width: $bolt-list-item-border-width;
+    }
+  }
+
+  @each $breakpoint in $bolt-breakpoints {
+    $breakpoint-name: nth($breakpoint, 1);
+
+    &.c-bolt-list-item--display-inline\@#{$breakpoint-name} {
+      &:not(.c-bolt-list-item--last-item) {
+        border-bottom-width: $bolt-list-item-border-width;
+
+        @include bolt-mq($breakpoint-name) {
+          border-right-width: $bolt-list-item-border-width;
+          border-bottom-width: 0;
+        }
       }
     }
   }
@@ -97,21 +113,30 @@ $bolt-list-separator-styles: solid, dashed;
   @each $spacing-value in $bolt-spacing-values {
     $spacing-value-name: nth($spacing-value, 1);
 
-    &:not(.c-bolt-list-item--last-item).c-bolt-list-item--spacing-#{$spacing-value-name} {
-      &.c-bolt-list-item--display-block {
-        @include bolt-padding-bottom(#{$spacing-value-name});
-      }
-    }
-
     &.c-bolt-list-item--spacing-#{$spacing-value-name} {
-      &.c-bolt-list-item--display-inline {
-        @include bolt-padding-right(#{$spacing-value-name});
-      }
-    }
+      &:not(.c-bolt-list-item--inset) {
+        &.c-bolt-list-item--display-flex {
+          margin-left: bolt-spacing(#{$spacing-value-name}) * 2;
+          margin-bottom: bolt-v-spacing(#{$spacing-value-name}) * 2;
 
-    &.c-bolt-list-item--spacing-#{$spacing-value-name} {
-      &.c-bolt-list-item--display-flex {
-        @include bolt-padding(#{$spacing-value-name});
+          &:before {
+            left: bolt-spacing(#{$spacing-value-name}) * -1;
+          }
+
+          &:after {
+            top: bolt-v-spacing(#{$spacing-value-name}) * -1;
+          }
+        }
+      }
+
+      &:not(.c-bolt-list-item--last-item) {
+        &.c-bolt-list-item--display-block {
+          @include bolt-padding-bottom(#{$spacing-value-name});
+        }
+
+        &.c-bolt-list-item--display-inline {
+          @include bolt-padding-right(#{$spacing-value-name});
+        }
       }
     }
 
